--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
     <%= javascript_include_tag 'application' %>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@600&display=swap" rel="stylesheet">
+<script type="text/javascript">
+  window.loginwpURL = "<%= image_url('loginwp.jpg')%>"
+</script>
   </head>
 
   <body>
