--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,31 @@
 <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@600&display=swap" rel="stylesheet">
 <script type="text/javascript">
   window.loginwpURL = "<%= image_url('loginwp.jpg')%>"
+  window.sliceoneURL = "<%= image_url('slice-one.svg')%>"
+  window.slicetwoURL = "<%= image_url('slice-two.svg')%>"
+  window.lightslashURL = "<%= image_url('light-slash.svg')%>"
+  window.slicefourURL = "<%= image_url('slice-four.svg')%>"
+  window.castleoneURL = "<%= image_url('castle-one.svg')%>"
+  window.castletwoURL = "<%= image_url('moving-castle.svg')%>"
+  window.bigmovingbottomURL = "<%= image_url('big-moving-bottom-cloud.svg')%>"
+  window.giantmovingURL = "<%= image_url('giant-moving-cloud.svg')%>"
+  window.bigbluemovingURL = "<%= image_url('big-blue-moving-cloud.svg')%>"
+  window.bigbluemoving2URL = "<%= image_url('big-blue-moving-cloud-2.svg')%>"
+  window.mediumthreeURL = "<%= image_url('medium-three.svg')%>"
+  window.seethruoneURL = "<%= image_url('seethru-one.svg')%>"
+  window.purplemovingURL = "<%= image_url('purple-moving.svg')%>"
+  window.thinmovinglinesURL = "<%= image_url('thin-moving-lines.svg')%>"
+  window.diastarURL = "<%= image_url('dia-star.svg')%>"
+  window.priateshipURL = "<%= image_url('pirate-ship.svg')%>"
+  window.purplearchURL = "<%= image_url('purple-arch.svg')%>"
+  window.whispycloudsURL = "<%= image_url('whispy-clouds.svg')%>"
+  window.balloonfightURL = "<%= image_url('balloon-fight.svg')%>"
+  window.citybgURL = "<%= image_url('city-bg.svg')%>"
+  window.froggyhomieURL = "<%= image_url('froggy-homie.svg')%>"
+  window.swagguysURL = "<%= image_url('swagguys.svg')%>"
+  window.scordidwhiteURL = "<%= image_url('SCORDID-white.png')%>"
+  window.scordidpurpleURL = "<%= image_url('SCORDID-purple.png')%>"
+
 </script>
   </head>
 
