--- a/app/assets/stylesheets/api/server_styles/channelsidebar.scss
+++ b/app/assets/stylesheets/api/server_styles/channelsidebar.scss
@@ -1,22 +1,34 @@
 .channel-title{
-    display: flex;
+   
+   
+    font-family: 'Catamaran',Arial,sans-serif;
+    color: white;
+
+};
+
+.title-box{
+     display: flex;
     justify-content: space-between;
     padding: 20px;
     background-color: #2f3136;
     border-bottom: 5px #202225;
-    font-family: 'Catamaran',Arial,sans-serif;
-    color: white;
-    margin: 0;
- 
+     margin: 0;
+    align-items: center;
     width: 250px;
-};
+}
 
 .channel-sidebar-nav{
     background-color: #2f3136;
+    border-bottom: 5px #202225;
 }
 
 .channel-listing{
+    -webkit-box-flex: 1;
+    flex: 1 1 auto;
+    box-sizing: border-box;
     display: flex;
+    flex-direction: row;
+    padding: 6px 0;
     font-size: 16px;
     color: gray;
     font-family: 'Catamaran',Arial,sans-serif;
@@ -27,7 +39,83 @@
 };
 
 .channel-listing:hover{
-    background-color: #51545c;
     color: white;
 }
+
+.channel-box:hover{
+    background-color: #51545c;
+    
+}
+
+.channel-box{
+    position: relative;
+    box-sizing: border-box;
+    padding: 0 8px;
+    margin-left: 8px;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.personal-tab{
+    background-color: #292b2f;
+    height: 52px;
+    font-size: 14px;    
+    font-weight: 500;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    padding: 0 8px; 
+    margin-bottom: 1px;
+    position: absolute;
+    bottom: 0;
+    width: 275px;
+}
+
+.profile-pic{
+    width: 32px;
+    height: 32px;
+    cursor: pointer;
+    flex-shrink: 0;
+    background-color: red;
+    border-radius: 50%;
+    position: relative;
+    outline: 0;
+    margin-right: 8px;
+}
+
+.nametag-box{
+    cursor: pointer;
+    user-select: text;
+    -webkit-box-flex: 1;
+    flex-grow: 1;
+    margin-right: 4px;
+    min-width: 0;
+}
+.userbox{
+   display: flex;
+    align-items: center;
+    -webkit-box-direction: normal;
+}
+.nametag{
+    font-family: 'Catamaran',Arial,sans-serif;
+    white-space: nowrap;
+    color: white;
+    line-height: 18px;
+    font-weight: 600;
+    font-size: 14px;
+}
+
+.numbertag{
+    white-space: nowrap;
+    color: #b9bbbe;
+    line-height: 13px;
+    font-size: 12px;
+    font-family: 'Catamaran',Arial,sans-serif;
+}
+
+
+
+
 
