--- a/app/assets/stylesheets/api/server_styles/membersidebar.scss
+++ b/app/assets/stylesheets/api/server_styles/membersidebar.scss
@@ -3,8 +3,14 @@
 };
 
 .member-listing{
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    border-radius: 4px;
+    height: 42px;
+    padding: 0 8px;
     font-size: 16px;
-    color: white;
+    color: #8e9297;
     font-family: 'Catamaran',Arial,sans-serif;
     font-weight: 500;
     display: flex;
@@ -14,4 +20,33 @@
 
 .member-listing:hover{
     background-color: #51545c;
+    color: white;
+}
+
+.mod-title{
+    padding: 24px 8px 0 16px;
+    height: 40px;
+    box-sizing: border-box;
+    text-transform: uppercase;
+    font-size: 12px;
+    line-height: 16px;
+    font-weight: 600;
+    -webkit-box-flex: 1;
+    flex: 1 1 auto;
+    color: #8e9297;
+    font-family: 'Catamaran',Arial,sans-serif;
+}
+
+.group-title{
+  padding: 24px 8px 0 16px;
+    height: 40px;
+    box-sizing: border-box;
+    text-transform: uppercase;
+    font-size: 12px;
+    line-height: 16px;
+    font-weight: 600;
+    -webkit-box-flex: 1;
+    flex: 1 1 auto;
+    color: #8e9297;
+    font-family: 'Catamaran',Arial,sans-serif;
 }
