--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,13 @@
   window.swagguysURL = "<%= image_url('swagguys.svg')%>"
   window.scordidwhiteURL = "<%= image_url('SCORDID-white.png')%>"
   window.scordidpurpleURL = "<%= image_url('SCORDID-purple.png')%>"
+  window.studygroupURL = "<%= image_url('studygroup.svg')%>"
+  window.greywaveURL = "<%= image_url('grey-wave.png')%>"
+  window.greywavebotURL = "<%= image_url('grey-wave-bot.png')%>"
+  window.voiceconnectedURL = "<%= image_url('voiceconnected.svg')%>"
+  window.hangoutlistURL = "<%= image_url('hangoutlist.svg')%>"
+  window.justchillinURL = "<%= image_url('justchillin.svg')%>"
+  window.sparklesURL = "<%= image_url('sparkles.svg')%>"
 
 </script>
   </head>
