--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
     <%= javascript_include_tag 'application' %>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@600&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
 <script type="text/javascript">
   window.loginwpURL = "<%= image_url('loginwp.jpg')%>"
   window.sliceoneURL = "<%= image_url('slice-one.svg')%>"
@@ -42,7 +44,13 @@
   window.hangoutlistURL = "<%= image_url('hangoutlist.svg')%>"
   window.justchillinURL = "<%= image_url('justchillin.svg')%>"
   window.sparklesURL = "<%= image_url('sparkles.svg')%>"
-
+  window.newleftURL = "<%=image_url('newgroupleft.svg')%>"
+  window.newrightURL = "<%=image_url('newgroupright.svg')%>"
+  window.newcloudsURL = "<%=image_url('newclouds.svg')%>"
+  window.newstudygroupURL = "<%=image_url('newstudygroup.svg')%>"
+  window.newvoiceconnectedURL = "<%=image_url('newvoiceconnected.svg')%>"
+  window.newfandomURL = "<%=image_url('newfandom.svg')%>"
+  window.newjustchillinURL = "<%=image_url('newjustchillin.svg')%>"
 </script>
   </head>
 
