--- a/app/assets/stylesheets/api/splashmid.scss
+++ b/app/assets/stylesheets/api/splashmid.scss
@@ -4,20 +4,27 @@
     line-height: 120%;
     text-align: center;
     display: block;
-    font-family: 'Catamaran', Arial, Helvetica, sans-serif;
+    font-family: 'Lato', Arial, Helvetica, sans-serif;
     margin-block-start: 0.83em;
     margin-block-end: 0.83em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
 }
 .invite-blurb{
-    display:flex;
-    padding-top: 120px;
-    padding-bottom: 120px;
+    display:grid;
+    padding: 120px 40px;
     grid-template-columns: repeat(12, 1fr);
     gap: 0 20px;
 
 }
+
+.study-group{
+    grid-column: span 7;
+    -webkit-box-ordinal-group: 2;
+    order: 1;
+}
+
+
 .collab-p{
     display: block;
 }
@@ -37,23 +44,38 @@
     order: 2;
 }
 
-.grey-wave{
-    width: 100%;
-}
-
 .hangout-section{
     background-color: #f6f6f6;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-direction: normal;
+    -webkit-box-orient: vertical;
+    flex-direction: column;
+
 }
 
-.hangout-grid{
-    padding-top: 120px;
-    padding-bottom: 120px;
+.fandom-section{
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-direction: normal;
+    -webkit-box-orient: vertical;
+    flex-direction: column;
     width: 100%;
+   
+}
+
+
+.hangout-grid{
+    
     box-sizing: border-box;
-    display: grid;
-    grid-template-columns: repeat(var(12),1fr);
+    display:grid;
+    grid-template-columns: repeat(12,1fr);
     gap: 0 20px;
-    padding: 0 var(40px)
+    padding: 120px 40px;
+    
+   
 }
 
 .hangout-text{
@@ -75,12 +97,19 @@
 
 .voice-connected{
     grid-column: 6/span 7;
-    display: flex;
     -webkit-box-ordinal-group: 3;
     order: 2;
     margin-top: auto;
     margin-bottom: auto;
 }
+
+.hangout-desc{
+    grid-column: 1/span 4;
+    margin-top: 0;
+    -webkit-box-ordinal-group: 2;
+    order: 1;
+}
+
 .grey-wave-2{
     background-color: #f6f6f6 ;
 }
@@ -89,14 +118,11 @@
 }
 
 .fandom-grid{
-    padding-top: 120px;
-    padding-bottom: 120px;
-    width: 100%;
-    box-sizing: border-box;
+     box-sizing: border-box;
     display: grid;
-    grid-template-columns: repeat(var(12),1fr);
+    grid-template-columns: repeat(12,1fr);
     gap: 0 20px;
-    padding: 0 var(40px)
+    padding: 120px 40px;
 }
 
 .fandom-desc{
@@ -124,12 +150,12 @@
 
 .hangout-list{
     grid-column: span 7;
-    display: flex;
     -webkit-box-ordinal-group: 2;
     order: 1;
     margin-top: auto;
     margin-bottom: auto;
 }
+
 
 .stayingclose-section{
     background-color: #f6f6f6;
@@ -188,6 +214,7 @@
     display: flex;
     -webkit-box-pack: center;
     justify-content: center;
+    
 }
 
 .sparkles-grid{
@@ -196,6 +223,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    margin-bottom: 18px;
 
 }
 
@@ -216,7 +244,7 @@
     padding: 18px 32px;
     text-decoration: none;
     font-size: 19px;
-    font-family: 'Catamaran',Arial,sans-serif;;
+    font-family: 'Lato',Arial,sans-serif;;
     display: flex;
     justify-content: space-between;
     border-radius: 40px;
@@ -231,4 +259,26 @@
     box-shadow: 0 8px 15px grey;
     background-color: #8ea1e1;
 
+}
+
+.footer{
+    background-color: #23272a;
+    padding-top: 80px;
+    padding-bottom: 64px;
+}
+
+.footer-grid{
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: repeat(var(4),1fr);
+    gap: 0 20px;
+    color: #7289da;
+    font-size: 32px;
+   
+}
+
+.footer-grid a{
+    color: white;
+    text-decoration: underline;
+    font-size: 16px;
 }
