--- a/app/assets/stylesheets/api/splashmid.scss
+++ b/app/assets/stylesheets/api/splashmid.scss
@@ -201,53 +201,77 @@
     justify-content: center;
 }
 
+
+
 .sparkles-section{
     background-color: #f6f6f6;
-
-}
-
-.sparkles-container{
-    position: absolute;
-    top: 0;
     width: 100%;
-    overflow: hidden;
     display: flex;
-    -webkit-box-pack: center;
-    justify-content: center;
-    
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-orient: vertical;
+    flex-direction: column;    
+    -webkit-box-direction: normal;
+
 }
 
 .sparkles-grid{
 
     width: 100%;
     display: flex;
+    margin-bottom: 120px;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-orient: vertical;
+    flex-direction: column;    
+    -webkit-box-align: center;
     align-items: center;
-    flex-direction: column;
-    margin-bottom: 18px;
+    position: relative;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    grid-template-columns: repeat((12), 1fr);
+    gap: 0 20px;
+    padding: 0 40px;
+
+
+
 
 }
 
+.sparks-div{
+    position: absolute;
+
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+}
+
 .ready{
+    margin-top: 30px;
+    z-index: 1;
     font-weight: 600;
     font-size: 32px;
     line-height: 120%;
     display: block;
-    margin-block-start: 1.33em;
-    margin-block-end: 1.33em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+
 }
 
 .button-bottom{
-    background-color: #7289da;
+    background-color: #5865f2;
     color: white;
+    width: auto;
+    border-radius: 16px;
+    font-size: 14px;
+    margin-top: 40px;
+    -webkit-box-pack: center;
+    justify-content: center;
     padding: 18px 32px;
     text-decoration: none;
-    font-size: 19px;
     font-family: 'Lato',Arial,sans-serif;;
     display: flex;
     justify-content: space-between;
-    border-radius: 40px;
     cursor: pointer;
     border:none;
 }
