--- a/app/assets/stylesheets/api/modal.scss
+++ b/app/assets/stylesheets/api/modal.scss
@@ -9,9 +9,10 @@
     padding: 0;
     border: 0;
     outline: 0;
+   
 }
 
-.modal-content{
+.modal-top{
     position: absolute;
     left: 0;
     right: 0;
@@ -25,7 +26,19 @@
     left: auto;
     right: auto;
     background-color: white;
-        z-index: 10000;
+    z-index: 10000;
+    display: flex;
+    justify-content: center;
+}
 
+.modal-top-text{
+    flex: 0 0 auto;
+    padding: 24px 16px 0;
+    -webkit-box-flex: 0;
+    border-radius: 5px 5px 0 0 ;
+}
 
+.modal-top-text>h3{
+    text-align: center;
+    font-weight: 700;
 }
