--- a/app/assets/stylesheets/api/modal.scss
+++ b/app/assets/stylesheets/api/modal.scss
@@ -36,9 +36,45 @@
     padding: 24px 16px 0;
     -webkit-box-flex: 0;
     border-radius: 5px 5px 0 0 ;
+    align-items: center;
 }
 
-.modal-top-text>h3{
+.modal-top-create{
     text-align: center;
     font-weight: 700;
+    font-size: 24px;
+}
+
+.modal-top-server{
+    text-align: center;
+    font-size: 16px;
+    margin-top: 8px;
+}
+
+.modal-x{
+    width: 24;
+    height: 24;
+    position: absolute;
+    top: 12px;
+    right: 12px;
+}
+
+.modal-create-buttons{
+ 
+    margin-top: 24px;
+    padding: 0 8px 8px 16px;
+
+}
+
+.my-own{
+    border-radius: 8px;
+    border: 1px solid;
+    background-color: white;
+    margin-bottom: 8px;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    cursor: pointer;
+    width: 100%;
+    padding: 0;
 }
