--- a/app/assets/stylesheets/api/modal.scss
+++ b/app/assets/stylesheets/api/modal.scss
@@ -78,3 +78,12 @@
     width: 100%;
     padding: 0;
 }
+
+.modal-background{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba($color: darkgrey, $alpha: 0.1);
+}
